<resources>
    <string name="app_name">Calculadora</string>
    <string name="c">C</string>
    <string name="percent">%</string>
    <string name="division">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiple">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="exit">Sair</string>
    <string name="zero">0</string>
    <string name="comma">,</string>
    <string name="equal">=</string>
    <string name="result">Resultado:</string>
    <string name="ultimo_result">Último Resultado:</string>
    <string name="clean">""</string>
    <string name="back_button_description">Voltar</string>
</resources>